--- a/MajorView/cards.html
+++ b/MajorView/cards.html
@@ -144,8 +144,9 @@
                 </div>
             </div>
         </div>
+
         <!-- Tasks Card Example -->
-        <button class="col-xl-3 col-md-6 mb-4" style="border: none; background-color: none;">
+        <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-info shadow h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -153,15 +154,13 @@
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">전문대학
                             </div>
                             <div class="row no-gutters align-items-center">
-                                <div class="col-auto">
-                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">OOO과</div>
-                                </div>
+                            <div class="col-auto">
+                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">OOO과</div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
-        </button>
+        </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
