--- a/CompanyView/CompanyInfo.html
+++ b/CompanyView/CompanyInfo.html
@@ -36,52 +36,71 @@
         </nav>
 
         <!-- Header-->
-        <header class="py-5">
+        <header class="py-5" >
             <section class="pt-4">
                 <div class="container px-lg-5">
                     <!-- Page Features-->
                     <div class="row gx-lg-5">
-                        <div class="col-lg-3 col-xxl-3 mb-5">
+                        <button class="col-lg-3 col-xxl-3" style="border: none; background-color: transparent;">
                             <div class="card bg-light border-0 h-100">
-                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-collection"></i></div>
+                                <div class="card-body text-center pt-0">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4" style="margin-top: 10px"><i class="bi bi-collection"></i></div>
                                     <h2 class="fs-4 fw-bold">IT과</h2>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-xxl-3 mb-5">
+                        </button>
+                        <button class="col-lg-3 col-xxl-3" style="border: none; background-color: transparent;">
                             <div class="card bg-light border-0 h-100">
-                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-cloud-download"></i></div>
-                                    <h2 class="fs-4 fw-bold">외식조리과</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-xxl-3 mb-5">
-                            <div class="card bg-light border-0 h-100">
-                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-card-heading"></i></div>
+                                <div class="card-body text-center pt-0">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4" style="margin-top: 10px"><i class="bi bi-collection"></i></div>
                                     <h2 class="fs-4 fw-bold">보건간호과</h2>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-xxl-3 mb-5">
+                        </button>
+                        <button class="col-lg-3 col-xxl-3" style="border: none; background-color: transparent;">
                             <div class="card bg-light border-0 h-100">
-                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-bootstrap"></i></div>
+                                <div class="card-body text-center pt-0">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4" style="margin-top: 10px"><i class="bi bi-collection"></i></div>
                                     <h2 class="fs-4 fw-bold">뷰티미용과</h2>
                                 </div>
                             </div>
-                        </div>
+                        </button>
+                        <button class="col-lg-3 col-xxl-3" style="border: none; background-color: transparent;">
+                            <div class="card bg-light border-0 h-100">
+                                <div class="card-body text-center pt-0">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4" style="margin-top: 10px"><i class="bi bi-collection"></i></div>
+                                    <h2 class="fs-4 fw-bold">외식조리과</h2>
+                                </div>
+                            </div>
+                        </button>
                     </div>
                 </div>
             </section>
         </header>
 
         <!-- Section-->
-        <section class="py-5">
+        <section class="">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <!-- Product price-->
+                                    $40.00 - $80.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
