--- a/MainView/index.html
+++ b/MainView/index.html
@@ -20,7 +20,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">LOGO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <button class="selectBtn" style="border: none;">
+                        <button class="selectBtn" style="border: none; background-color: transparent;">
                             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                                 <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
                                 <h3>진로상담</h3>
@@ -63,7 +63,7 @@
                         </button>
                     </div>
                     <div class="col-lg-4">
-                        <button class="selectBtn" style="border: none;">
+                        <button class="selectBtn" style="border: none; background-color: transparent;">
                             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                                 <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
                                 <h3>대학정보</h3>
@@ -72,7 +72,7 @@
                         </button>
                     </div>
                     <div class="col-lg-4">
-                        <button class="selectBtn" style="border: none;">
+                        <button class="selectBtn" style="border: none; background-color: transparent;">
                             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                                 <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
                                 <h3>기업정보</h3>
@@ -81,11 +81,11 @@
                         </button>
                     </div>
                     <div class="col-lg-4">
-                        <button class="selectBtn" style="border: none;">
+                        <button class="selectBtn" style="border: none; background-color: transparent;">
                             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                                 <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
                                 <h3>학과정보</h3>
-                                <p class="lead mb-0">다양한 학과의 정보를 알아보세요</p>
+                                <p class="lead mb-0">다양한 학과의 정보를 검색하여 진로를 정해보세요</p>
                             </div>
                         </button>
                     </div>
@@ -93,36 +93,8 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                        <ul class="list-inline mb-2">
-                            <li class="list-inline-item"><a href="#!">About</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Privacy Policy</a></li>
-                        </ul>
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2023. All Rights Reserved.</p>
-                    </div>
-                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
