--- a/MajorView/MajorInfo.html
+++ b/MajorView/MajorInfo.html
@@ -19,13 +19,11 @@
 
     <!-- Custom styles for this template-->
     <link href="css/majorView.css" rel="stylesheet">
-    <link href="css/majorView2.css" rel="stylesheet">
+    <link href="css/navbar.css" rel="stylesheet">
+    <!-- <link href="css/majorView2.css" rel="stylesheet"> -->
 
-
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
@@ -40,7 +38,7 @@
     </style>
 </head>
 
-<body id="page-top">
+<body>
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-lg-5">
