--- a/UnivercityView/UnivercityInfo.html
+++ b/UnivercityView/UnivercityInfo.html
@@ -13,7 +13,19 @@
         <link href="css/univerityView.css" rel="stylesheet" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>  
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+            <script>
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            </script>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -35,6 +47,91 @@
             </div>
       </nav>
         
+      <div class="container-xl">
+        <div class="table-responsive">
+            <div class="table-wrapper">
+                <div class="table-title">
+                    <div class="row">
+                        <div class="col-sm-8"><h2>Customer <b>Details</b></h2></div>
+                        <div class="col-sm-4">
+                            <div class="search-box">
+                                <i class="material-icons">&#xE8B6;</i>
+                                <input type="text" class="form-control" placeholder="Search&hellip;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <table class="table table-striped table-hover table-bordered">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name <i class="fa fa-sort"></i></th>
+                            <th>Address</th>
+                            <th>City <i class="fa fa-sort"></i></th>
+                            <th>Pin Code</th>
+                            <th>Country <i class="fa fa-sort"></i></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Thomas Hardy</td>
+                            <td>89 Chiaroscuro Rd.</td>
+                            <td>Portland</td>
+                            <td>97219</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Maria Anders</td>
+                            <td>Obere Str. 57</td>
+                            <td>Berlin</td>
+                            <td>12209</td>
+                            <td>Germany</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Fran Wilson</td>
+                            <td>C/ Araquil, 67</td>
+                            <td>Madrid</td>
+                            <td>28023</td>
+                            <td>Spain</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Dominique Perrier</td>
+                            <td>25, rue Lauriston</td>
+                            <td>Paris</td>
+                            <td>75016</td>
+                            <td>France</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Martin Blank</td>
+                            <td>Via Monte Bianco 34</td>
+                            <td>Turin</td>
+                            <td>10100</td>
+                            <td>Italy</td>
+                        </tr>        
+                    </tbody>
+                </table>
+                <div class="clearfix">
+                    <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+                    <ul class="pagination">
+                        <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
+                        <li class="page-item"><a href="#" class="page-link">1</a></li>
+                        <li class="page-item"><a href="#" class="page-link">2</a></li>
+                        <li class="page-item active">
+                            <a href="#" class="page-link">3</a>
+                        </li>
+                        <li class="page-item"><a href="#" class="page-link">4</a></li>
+                        <li class="page-item"><a href="#" class="page-link">5</a></li>
+                        <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>  
+    </div>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
@@ -43,6 +140,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <!-- <script src="js/scripts.js"></script> -->
     </body>
 </html>
