--- a/UnivercityView/UnivercityInfo.html
+++ b/UnivercityView/UnivercityInfo.html
@@ -112,11 +112,51 @@
                             <td>Turin</td>
                             <td>10100</td>
                             <td>Italy</td>
-                        </tr>        
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Martin Blank</td>
+                            <td>Via Monte Bianco 34</td>
+                            <td>Turin</td>
+                            <td>10100</td>
+                            <td>Italy</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Martin Blank</td>
+                            <td>Via Monte Bianco 34</td>
+                            <td>Turin</td>
+                            <td>10100</td>
+                            <td>Italy</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>Martin Blank</td>
+                            <td>Via Monte Bianco 34</td>
+                            <td>Turin</td>
+                            <td>10100</td>
+                            <td>Italy</td>
+                        </tr> 
+                        <tr>
+                            <td>9</td>
+                            <td>Martin Blank</td>
+                            <td>Via Monte Bianco 34</td>
+                            <td>Turin</td>
+                            <td>10100</td>
+                            <td>Italy</td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>Martin Blank</td>
+                            <td>Via Monte Bianco 34</td>
+                            <td>Turin</td>
+                            <td>10100</td>
+                            <td>Italy</td>
+                        </tr>     
                     </tbody>
                 </table>
                 <div class="clearfix">
-                    <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+                    <div class="hint-text">Showing <b>10</b> out of <b>25</b> entries</div>
                     <ul class="pagination">
                         <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
                         <li class="page-item"><a href="#" class="page-link">1</a></li>
