--- a/UnivercityView/UnivercityInfo.html
+++ b/UnivercityView/UnivercityInfo.html
@@ -137,6 +137,7 @@
         for (i = 0; i < pageData.length; i++) {
             trList += toDOM(pageData[i]); 
         }
+        console.log(trList);
         document.querySelector('#' + id + ' tbody').innerHTML = trList;  
     }
 
