--- a/UnivercityView/UnivercityInfo.html
+++ b/UnivercityView/UnivercityInfo.html
@@ -13,14 +13,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color: white;">
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-lg-5">
@@ -41,6 +41,7 @@
 </nav>
 
 <div class="container-xl">
+
     <div class="table-responsive">
         <div class="table-wrapper">
             <div class="table-title">
@@ -54,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-hover table-bordered">
+            <table id="table" class="table table-striped table-hover table-bordered">
                 <thead>
                 <tr>
                     <!-- 기준년도 학교명 전형유형명 전형대분류 전형중분류 전형소분류 -->
@@ -70,14 +71,11 @@
                 </tbody>
             </table>
             <div class="clearfix">
-                <div class="hint-text">Showing <b>15</b> out of <b>25</b> entries</div>
                 <ul class="pagination">
-                    <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
+                    <li class="page-item"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
                     <li class="page-item active"><a href="#" class="page-link">1</a></li>
                     <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">3</a>
-                    </li>
+                    <li class="page-item"><a href="#" class="page-link">3</a></li>
                     <li class="page-item"><a href="#" class="page-link">4</a></li>
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
                     <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
@@ -120,9 +118,8 @@
                 // 원하는 작업 수행
                 console.log(response["pageData"])
                 console.log(response["columnData"])
-                
+
                 var pageData = response['pageData']
-                await
                 renderTable('table', pageData)
             },
             error: function(xhr, status, error) {
@@ -135,10 +132,10 @@
         var trList = '';
         console.log(pageData)
         for (i = 0; i < pageData.length; i++) {
-            trList += toDOM(pageData[i]); 
+            trList += toDOM(pageData[i]);
         }
         console.log(trList);
-        document.querySelector('#' + id + ' tbody').innerHTML = trList;  
+        document.querySelector('#' + id + ' tbody').innerHTML = trList;
     }
 
     window.onload = function () {
