--- a/UnivercityView/UnivercityInfo.html
+++ b/UnivercityView/UnivercityInfo.html
@@ -8,17 +8,17 @@
     <title>Heroic Features - Start Bootstrap Template</title>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
-    <link th:href="@{/css/universityView.css}" rel="stylesheet">
+    <link th:href="/css/universityView.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: white;">
 <!-- Responsive navbar-->
@@ -58,7 +58,6 @@
             <table id="table" class="table table-striped table-hover table-bordered">
                 <thead>
                 <tr>
-                    <!-- 기준년도 학교명 전형유형명 전형대분류 전형중분류 전형소분류 -->
                     <th>기준년도 </th>
                     <th>학교명 <i class="fa fa-sort"></i></th>
                     <th>전형유형명</th>
@@ -72,7 +71,7 @@
             </table>
             <div class="clearfix">
                 <ul class="pagination">
-                    <li class="page-item"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
+                    <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
                     <li class="page-item active"><a href="#" class="page-link">1</a></li>
                     <li class="page-item"><a href="#" class="page-link">2</a></li>
                     <li class="page-item"><a href="#" class="page-link">3</a></li>
@@ -85,7 +84,7 @@
     </div>
 </div>
 
-<script>
+<!-- <script>
     $(document).ready(function(){
         $('[data-toggle="tooltip"]').tooltip();
     });
@@ -140,9 +139,47 @@
 
     window.onload = function () {
         ajax();
+        renderPagination(1)
     };
-</script>
+</script> -->
 
+<section class="ftco-section" style="height: 1000px;">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center mb-5">
+                <h2 class="heading-section">zhfvkq table</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <!-- page count -->
+                <div id="page_info"></div>
+                <!-- board -->
+                <div class="table-wrap">
+                    <table class="table">
+                      <thead class="thead-dark">
+                        <tr>
+                            <th>기준년도</th>
+                            <th>학교명</th>
+                            <th>전형유형명</th>
+                            <th>전형대분류</th>
+                            <th>전형중분류</th>
+                            <th>전형소분류</th>
+                        </tr>
+                      </thead>
+                      <tbody id="html_list">
+                      </tbody>
+                    </table>
+                    <!-- pagination -->
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center" id="paging">
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
