--- a/UnivercityView/UnivercityInfo.html
+++ b/UnivercityView/UnivercityInfo.html
@@ -59,11 +59,11 @@
                 <thead>
                 <tr>
                     <th>기준년도 </th>
-                    <th>학교명 <i class="fa fa-sort"></i></th>
+                    <th>학교명</th>
                     <th>전형유형명</th>
-                    <th>전형대분류 <i class="fa fa-sort"></i></th>
-                    <th>전형중분류 </th>
-                    <th>전형소분류 <i class="fa fa-sort"></i></th>
+                    <th>전형대분류</th>
+                    <th>전형중분류</th>
+                    <th>전형소분류</th>
                 </tr>
                 </thead>
                 <tbody>
