--- a/UnivercityView/UniversityDetail.html
+++ b/UnivercityView/UniversityDetail.html
@@ -35,7 +35,7 @@
     <div class="row py-5">
         <div class="col-lg-10 mx-auto">
           <div class="card rounded shadow border-0">
-            <h2 style="font-weight: bold;">
+            <h2 style="font-weight: bold; margin: auto; padding-top: 10px;">
                 한양대학교
             </h2>
             <div class="card-body p-5 bg-white rounded">
