--- a/UnivercityView/UniversityDetail.html
+++ b/UnivercityView/UniversityDetail.html
@@ -8,9 +8,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    
+    <!-- Chart -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="/document/JYS-Information/UnivercityView/js/detail.js"></script>
+    <script type="text/javascript">
+      
+    </script>
 </head>
-<body>
+<body style="overflow-x: hidden">
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark1">
     <div class="container px-lg-5">
@@ -35,9 +40,13 @@
     <div class="row py-5">
         <div class="col-lg-10 mx-auto">
           <div class="card rounded shadow border-0">
-            <h2 style="font-weight: bold; margin: auto; padding-top: 10px;">
+            <h2 style="font-weight: bold; margin: auto; padding-top: 20px;">
                 한양대학교
             </h2>
+            <br>
+            <p style="margin: auto">
+              기준년도 : 2022 전형유형명 : OOO 전형대분류 : OOO 전형중분류 : OOO 전형소분류 : OOO 
+            </p>
             <div class="card-body p-5 bg-white rounded">
               <div class="table-responsive">
                 <table id="example" style="width:100%" class="table table-striped table-bordered">
@@ -113,6 +122,12 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+
+              <div class="chart-area">
+                <div class="chart" style="margin: auto;">
+                  <div id="columnchart_material" style="width: 100%; height: 300px;"></div>
+                </div>
               </div>
             </div>
           </div>
